# GoodVibesOnly

./: README.md
vibe2prod/: .gitignore  README.md  pyproject.toml
vibe2prod/examples/: vibe_code_example.py  vibe_code_example_ai.py  vibe_code_example_commented.py  vibe_code_example_docs.md  vibe_code_example_prod.py  vibe_code_example_report.md
vibe2prod/src/vibe2prod/: __init__.py  cli.py  comment_drift_checker.py  comment_enhancer.py  dead_code_checker.py  documentation_generator.py  duplicate_checker.py  llm_client.py  naming_checker.py  pipeline.py  prod_refactor.py  report_generator.py
vibe2prod/src/vibe2prod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vibe2prod/tests/: test_comment_enhancer.py  test_prod_refactor.py
